Fixed CSS vertical-align

--- a/admin/css/alkaline.css
+++ b/admin/css/alkaline.css
@@ -115,7 +115,7 @@ ul{
 	list-style-type: square;
 }
 
-td{
+td.top{
 	vertical-align: top;
 }
 
